<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background" >

    <TextView
        android:id="@+id/listingPriceLabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/main_ListingPriceLabel"
        android:textSize="18sp"
        android:textColor="@color/static_text"
        tools:context=".MainActivity" />

    <EditText
        android:id="@+id/listingPriceEditView"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
		android:layout_toRightOf="@+id/listingPriceLabelView"
		android:layout_marginTop="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="8dp"
		android:layout_marginLeft="8dp"
		android:padding="4dp"
		android:background="@drawable/editstyleoverride"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:maxLength="6"
        android:hint="@string/zeroCashAmount"
        android:textColor="@color/static_text"
        android:textSize="18sp" >
    </EditText>
    
    <TextView 
        android:id="@+id/depositToLabelView" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listingPriceLabelView"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/static_text"
        android:textSize="18sp"
        android:text="@string/depositFundsTo"/>
    
    <RadioGroup
        android:id="@+id/sendToRadioGroupMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/depositToLabelView"
        android:layout_below="@id/listingPriceEditView"
        android:layout_margin="8dp">
        
        <RadioButton 
            android:id="@+id/sendToBattlenet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/depositBattleNet"
            android:textColor="@color/static_text"
            android:textSize="18sp" />
        
        <RadioButton 
            android:id="@+id/sendtoPaypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depositPayPal"
            android:textColor="@color/static_text"
            android:textSize="18sp" />
        
    </RadioGroup>
    
    <TextView 
        android:id="@+id/receiveAmountLabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sendToRadioGroupMain"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/static_text"
        android:textSize="18sp"
        android:text="@string/main_ReceiveAmountLabel" />
    
    <TextView 
        android:id="@+id/main_receiveAmountOutView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/receiveAmountLabelView"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/light_green"
        android:textSize="64sp"
        android:text="@string/zeroCashAmount" />
    
    <Button 
        android:id="@+id/main_CalculateButton"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_below="@id/main_receiveAmountOutView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="4dp"
        android:background="@drawable/buttonstyleoverride"
        android:textColor="@color/static_text"
        android:textSize="18sp"
        android:text="@string/btnCalculate" />

</RelativeLayout>
